--- a/.eslintrc
+++ b/.eslintrc
@@ -11,6 +11,10 @@
         "@typescript-eslint/no-unused-vars": ["error"],
         "no-empty-function": ["off"],
         "@typescript-eslint/no-empty-function": ["error"],
-        "no-else-return": ["off"]
+        "no-else-return": ["off"],
+        "max-classes-per-file": ["off"],
+        "no-plusplus": ["off"],
+        "import/no-unresolved": ["off"],
+        "no-undef": "off"
     }
 }
