compilation fixes and error handling

--- a/.eslintrc
+++ b/.eslintrc
@@ -6,6 +6,7 @@
         "prettier/prettier": ["error"],
         "no-console": ["off"],
         "no-useless-constructor": ["off"],
+        "class-methods-use-this": ["off"],
         "@typescript-eslint/no-useless-constructor": ["error"],
         "no-unused-vars": ["off"],
         "@typescript-eslint/no-unused-vars": ["error"],
