vis changes for isomorphic representation and documentation pages

--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "keywords": [
         "data",
         "science",
-        "clustering"
+        "clustering",
+        "machine learning"
     ],
     "author": "",
     "license": "MIT",
