--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "main": "app.ts",
     "scripts": {
         "dev": "nodemon",
+        "lab": "node server.js",
         "test": "jest --coverage --passWithNoTests",
         "lint": "npm run lint:json && npm run lint:ts",
         "lint:json": "prettier --list-different .eslintrc *.json",
@@ -33,6 +34,7 @@
         "@types/jsdom": "^16.2.4",
         "@types/node-fetch": "^2.5.7",
         "@types/pouchdb": "^6.4.0",
+        "@types/react": "^16.9.55",
         "@types/sharp": "^0.26.0",
         "@typescript-eslint/eslint-plugin": "^2.2.0",
         "@typescript-eslint/parser": "^2.2.0",
@@ -41,9 +43,16 @@
         "eslint-config-prettier": "^6.3.0",
         "eslint-plugin-import": "^2.18.2",
         "eslint-plugin-prettier": "^3.1.0",
+        "express": "^4.17.1",
+        "express-pouchdb": "^4.2.0",
         "jest": "^26.4.2",
+        "next": "9.5.3",
         "nodemon": "^2.0.4",
+        "pouchdb": "^7.2.2",
+        "pouchdb-fauxton": "0.0.6",
         "prettier": "^1.18.2",
+        "react": "16.13.1",
+        "react-dom": "16.13.1",
         "rimraf": "^3.0.2",
         "ts-jest": "^26.3.0",
         "ts-node": "^9.0.0",
