--- a/tsconfig.json
+++ b/tsconfig.json
@@ -63,7 +63,8 @@
         "moduleResolution": "node",
         "resolveJsonModule": true,
         "isolatedModules": true,
-        "jsx": "preserve"
+        "jsx": "preserve",
+        "noEmit": true
     },
     "include": ["./lib/**/*.ts"],
     "exclude": ["node_modules"]
