--- a/showcase-generator/tsconfig.json
+++ b/showcase-generator/tsconfig.json
@@ -5,9 +5,9 @@
         "strict": true,
         "noImplicitReturns": true,
         "noImplicitAny": true,
-        "module": "es6",
+        "module": "commonjs",
         "moduleResolution": "node",
-        "target": "es5",
+        "target": "ES2017",
         "allowJs": true,
         "jsx": "react",
         "esModuleInterop": true,
