--- a/showcase-generator/package.json
+++ b/showcase-generator/package.json
@@ -2,13 +2,13 @@
     "name": "showcase-generator",
     "version": "1.0.0",
     "description": "",
-    "main": ".src/index.tsx",
+    "main": "./src/index.tsx",
     "keywords": [],
     "author": "",
     "license": "ISC",
     "scripts": {
         "clean": "rm dist/bundle.js",
-        "build-dev": "webpack --mode development --watch",
+        "dev": "webpack serve",
         "build-prod": "webpack --mode production"
     },
     "devDependencies": {
@@ -19,7 +19,9 @@
         "ts-loader": "^8.0.9",
         "typescript": "^4.0.5",
         "webpack": "^5.4.0",
-        "webpack-cli": "^4.2.0"
+        "webpack-bundle-analyzer": "^4.1.0",
+        "webpack-cli": "^4.2.0",
+        "webpack-dev-server": "^3.11.0"
     },
     "dependencies": {
         "html-webpack-plugin": "^4.5.0"
