--- a/package.json
+++ b/package.json
@@ -67,6 +67,7 @@
         "pouchdb": "^7.2.2",
         "preact-compat": "^3.19.0",
         "react": "16.13.1",
-        "sharp": "^0.26.2"
+        "sharp": "^0.26.2",
+        "three": "^0.122.0"
     }
 }
