--- a/package.json
+++ b/package.json
@@ -68,6 +68,7 @@
         "preact-compat": "^3.19.0",
         "react": "16.13.1",
         "sharp": "^0.26.2",
-        "three": "^0.122.0"
+        "three": "^0.122.0",
+        "three-orbit-controls": "^82.1.0"
     }
 }
