--- a/package.json
+++ b/package.json
@@ -36,6 +36,8 @@
         "@types/node-fetch": "^2.5.7",
         "@types/pouchdb": "^6.4.0",
         "@types/react": "^16.9.55",
+        "@types/rfdc": "^1.1.0",
+        "@types/seedrandom": "^2.4.28",
         "@types/sharp": "^0.26.0",
         "@typescript-eslint/eslint-plugin": "^2.2.0",
         "@typescript-eslint/parser": "^2.2.0",
@@ -45,6 +47,7 @@
         "eslint-plugin-import": "^2.18.2",
         "eslint-plugin-prettier": "^3.1.0",
         "jest": "^26.4.2",
+        "node-fetch": "^2.6.1",
         "nodemon": "^2.0.4",
         "pouchdb-fauxton": "0.0.6",
         "prettier": "^1.18.2",
@@ -54,18 +57,19 @@
         "ts-node": "^9.0.0",
         "typedoc": "^0.19.1",
         "typedoc-plugin-markdown": "^2.4.2",
-        "typescript": "^3.8.0",
-        "node-fetch": "^2.6.1"
+        "typescript": "^3.8.0"
     },
     "dependencies": {
-        "react": "16.13.1",
         "canvas": "^2.6.1",
         "d3": "^6.2.0",
-        "jsdom": "^16.4.0",
-        "pouchdb": "^7.2.2",
-        "sharp": "^0.26.2",
         "express": "^4.17.1",
         "express-pouchdb": "^4.2.0",
-        "next": "9.5.3"
+        "jsdom": "^16.4.0",
+        "next": "9.5.3",
+        "pouchdb": "^7.2.2",
+        "react": "16.13.1",
+        "rfdc": "^1.1.4",
+        "seedrandom": "^3.0.5",
+        "sharp": "^0.26.2"
     }
 }
