--- a/package.json
+++ b/package.json
@@ -67,6 +67,7 @@
         "express-pouchdb": "^4.2.0",
         "jsdom": "^16.4.0",
         "next": "9.5.3",
+        "node-html-to-image": "^3.1.0",
         "pouchdb": "^7.2.2",
         "react": "16.13.1",
         "rfdc": "^1.1.4",
