finished documentation generation

--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
         "lint:json": "prettier --list-different .eslintrc *.json",
         "lint:ts": "eslint --ext .js,.ts --ignore-path .eslintignore .",
         "build": "tsc --p ./lib",
-        "build:samples": "webpack -c ./samples.webpack.config.js --mode production",
+        "build:samples": "rimraf docs/samples && webpack -c ./samples.webpack.config.js --mode production",
         "build:plugins": "rimraf ./tools/typedoc-plugin-markdown/dist && tsc --p ./tools/typedoc-plugin-markdown && copyfiles --up 3 ./tools/typedoc-plugin-markdown/src/**/*.hbs ./tools/typedoc-plugin-markdown/dist/",
         "build:docs": "npm run build:samples && rimraf docs/docs && typedoc --options ./typedoc.json --plugin ./tools/typedoc-plugin-markdown && rimraf docs/docs/globals.md",
         "generate-showcase": "cd showcase-generator && npm run build-prod"
