--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -16,7 +16,7 @@
 title: DataSpot
 description: Isomorphic Data Science Library
 baseurl: "/dataspot" # the subpath of your site, e.g. /blog
-url: "https://www.ascentcore.com/dataspot/" # the base hostname & protocol for your site, e.g. http://example.com
+url: "https://www.ascentcore.com/" # the base hostname & protocol for your site, e.g. http://example.com
 
 permalink: pretty
 exclude: ["node_modules/", "*.gemspec", "*.gem", "Gemfile", "Gemfile.lock", "package.json", "package-lock.json",  "script/", "LICENSE.txt", "lib/", "bin/", "README.md", "Rakefile"
