--- a/package.json
+++ b/package.json
@@ -1,8 +1,9 @@
 {
     "name": "@ascentcore/dataspot",
-    "version": "1.0.0",
+    "version": "0.0.1",
     "description": "Data Science Package for Javascript",
-    "main": "app.ts",
+    "main": "./dist/index.js",
+    "types": "./dist/index.d.ts",
     "scripts": {
         "dev": "nodemon",
         "lab": "node server.js",
@@ -27,12 +28,12 @@
         "clustering",
         "machine learning"
     ],
-    "author": "",
+    "author": "Ascentcore",
     "license": "MIT",
     "bugs": {
         "url": "https://github.com/ascentcore/dataspot/issues"
     },
-    "homepage": "https://github.com/ascentcore/dataspot#readme",
+    "homepage": "https://www.ascentcore.com/dataspot/",
     "devDependencies": {
         "@types/d3": "^5.16.3",
         "@types/jsdom": "^16.2.4",
