--- a/package.json
+++ b/package.json
@@ -72,6 +72,7 @@
         "webpack-cli": "^4.2.0"
     },
     "dependencies": {
+        "beepbeep": "^1.3.0",
         "canvas": "^2.6.1",
         "d3": "^6.2.0",
         "express": "^4.17.1",
@@ -81,6 +82,7 @@
         "node-html-to-image": "^3.1.0",
         "pouchdb": "^7.2.2",
         "react": "16.13.1",
+        "request": "^2.88.2",
         "rfdc": "^1.1.4",
         "seedrandom": "^3.0.5",
         "sharp": "^0.26.2",
