added outlier datasets

--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
         "lint:json": "prettier --list-different .eslintrc *.json",
         "lint:ts": "eslint --ext .js,.ts --ignore-path .eslintignore .",
         "build": "tsc --p ./lib",
+        "transpile:samples": "tsc -p ./samples && tsc-alias",
         "build:samples": "rimraf docs/samples && webpack -c ./samples.webpack.config.js --mode production",
         "build:plugins": "rimraf ./tools/typedoc-plugin-markdown/dist && tsc --p ./tools/typedoc-plugin-markdown && copyfiles --up 3 ./tools/typedoc-plugin-markdown/src/**/*.hbs ./tools/typedoc-plugin-markdown/dist/",
         "build:docs": "npm run build:samples && rimraf docs/docs && cd lib && typedoc --options ./typedoc.json --plugin ../tools/typedoc-plugin-markdown && rimraf ../docs/docs/globals.md",
@@ -66,6 +67,7 @@
         "ts-jest": "^26.3.0",
         "ts-loader": "^8.0.9",
         "ts-node": "^9.0.0",
+        "tsc-alias": "^1.3.7",
         "tsconfig-paths": "^3.9.0",
         "typedoc": "0.19.1",
         "typedoc-plugin-markdown": "2.4.2",
